# slopnet-mcp

./: .mcp.json  CHANGES.md  INSTALL.md  LICENSE  README.md  config.py  extraction.py  pyproject.toml  repo.py  seed_axon.py  server.py  test_mcp.py
.github/workflows/: ci.yml
data/: 000009.sst  000036.sst  000037.sst  000038.sst  000039.sst  000054.sst  IDENTITY  LOG  LOG.old.1768040357994004  LOG.old.1768040402924205  LOG.old.1768040404143621  LOG.old.1768040601573944  LOG.old.1768041333571810  LOG.old.1768041632343290  LOG.old.1768041637737346  LOG.old.1768045004139662  LOG.old.1768046307154645  MANIFEST-000051  OPTIONS-000048
ontology/: know.ttl
tests/: test_server.py
