[project]
name = "axon-mcp-server"
version = "0.1.0"
requires-python = ">=3.12"
description = "MCP server for Axon RDF Graph"
dependencies = [
    "mcp",
    "httpx",
    "uvicorn"
]

[project.scripts]
axon-mcp = "axon_mcp.server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
