[project]
name = "mcp-slop"
version = "0.1.0"
requires-python = ">=3.12"
description = "MCP server for Slopnet - knowledge graph slops with entity extraction"
dependencies = [
    "mcp",
    "httpx",
    "uvicorn",
    "rdflib>=7.0.0",
    "gliner2>=0.1.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
mcp-slop = "slop_mcp.server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "config", "repo", "extraction"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
