[project]
name = "slopnet-mcp"
version = "0.1.0"
requires-python = ">=3.12"
description = "MCP server for Slopnet - knowledge graph slops with entity extraction"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "mcp",
    "httpx",
    "pyoxigraph>=0.5.0",
    "gliner2>=0.1.0",
]

[project.scripts]
slopnet-mcp = "server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "config", "repo", "extraction"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
